Fix for bio section on mobile displays

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -98,7 +98,15 @@
    justify-content: center;
    border: rgb(86, 129, 39) solid 3px;
    border-radius: 25px;
-   overflow: auto;
+   /* overflow: auto; */
+ }
+
+ #bioCard {
+   max-width: 25%;
+ }
+
+ #bioCard :hover {
+   /* box-shadow: 0px 0px 15px 0px rgb(229, 124, 27) !important; */
  }
 
 
@@ -112,6 +120,12 @@
  @media screen and (max-width: 700px) {
    #landingGrid {
      grid-template-columns: repeat(2, 1fr);
+     padding-bottom: 70%;
+   }
+
+   #bioCard {
+     max-width: 80%;
+     align-self: center;
    }
 
    #foodSection {
@@ -127,7 +141,7 @@
 
  .landingGridItem :hover {
    background-color: #e8f5e9;
-   box-shadow: 0px 0px 10px 0px rgb(229, 124, 27);
+   box-shadow: 0px 0px 15px 0px rgb(229, 124, 27);
  }
 
  .landingGridContent {
